@@ -13,22 +13,22 @@
  */
 package com.facebook.presto.sql.gen;
 
+import com.facebook.presto.operator.PageWithPositionComparator;
 import com.facebook.presto.operator.PagesIndex;
 import com.facebook.presto.operator.PagesIndexComparator;
 import com.facebook.presto.operator.PagesIndexOrdering;
+import com.facebook.presto.operator.SimplePageWithPositionComparator;
 import com.facebook.presto.operator.SimplePagesIndexComparator;
 import com.facebook.presto.operator.SyntheticAddress;
+import com.facebook.presto.spi.Page;
 import com.facebook.presto.spi.block.Block;
 import com.facebook.presto.spi.block.SortOrder;
 import com.facebook.presto.spi.type.Type;
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.base.Throwables;
 import com.google.common.cache.CacheBuilder;
 import com.google.common.cache.CacheLoader;
 import com.google.common.cache.LoadingCache;
 import com.google.common.collect.ImmutableList;
-import com.google.common.util.concurrent.ExecutionError;
-import com.google.common.util.concurrent.UncheckedExecutionException;
 import io.airlift.bytecode.BytecodeBlock;
 import io.airlift.bytecode.ClassDefinition;
 import io.airlift.bytecode.MethodDefinition;
@@ -45,7 +45,6 @@ import org.weakref.jmx.Nested;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.concurrent.ExecutionException;
 
 import static com.facebook.presto.sql.gen.SqlTypeBytecodeExpression.constantType;
 import static com.facebook.presto.util.CompilerUtils.defineClass;
@@ -69,11 +68,23 @@ public class OrderingCompiler
             .maximumSize(1000)
             .build(CacheLoader.from(key -> internalCompilePagesIndexOrdering(key.getSortTypes(), key.getSortChannels(), key.getSortOrders())));
 
+    private final LoadingCache<PagesIndexComparatorCacheKey, PageWithPositionComparator> pageWithPositionComparators = CacheBuilder.newBuilder()
+            .recordStats()
+            .maximumSize(1000)
+            .build(CacheLoader.from(key -> internalCompilePageWithPositionComparator(key.getSortTypes(), key.getSortChannels(), key.getSortOrders())));
+
     @Managed
     @Nested
     public CacheStatsMBean getPagesIndexOrderingsStats()
     {
         return new CacheStatsMBean(pagesIndexOrderings);
+    }
+
+    @Managed
+    @Nested
+    public CacheStatsMBean getPageWithPositionsComparatorsStats()
+    {
+        return new CacheStatsMBean(pageWithPositionComparators);
     }
 
     public PagesIndexOrdering compilePagesIndexOrdering(List<Type> sortTypes, List<Integer> sortChannels, List<SortOrder> sortOrders)
@@ -82,12 +93,7 @@ public class OrderingCompiler
         requireNonNull(sortChannels, "sortChannels is null");
         requireNonNull(sortOrders, "sortOrders is null");
 
-        try {
-            return pagesIndexOrderings.get(new PagesIndexComparatorCacheKey(sortTypes, sortChannels, sortOrders));
-        }
-        catch (ExecutionException | UncheckedExecutionException | ExecutionError e) {
-            throw Throwables.propagate(e.getCause());
-        }
+        return pagesIndexOrderings.getUnchecked(new PagesIndexComparatorCacheKey(sortTypes, sortChannels, sortOrders));
     }
 
     @VisibleForTesting
@@ -99,10 +105,10 @@ public class OrderingCompiler
         PagesIndexComparator comparator;
         try {
             Class<? extends PagesIndexComparator> pagesHashStrategyClass = compilePagesIndexComparator(sortTypes, sortChannels, sortOrders);
-            comparator = pagesHashStrategyClass.newInstance();
+            comparator = pagesHashStrategyClass.getConstructor().newInstance();
         }
         catch (Throwable e) {
-            log.error(e, "Error compiling comparator for channels %s with order %s", sortChannels, sortChannels);
+            log.error(e, "Error compiling comparator for channels %s with order %s", sortChannels, sortOrders);
             comparator = new SimplePagesIndexComparator(sortTypes, sortChannels, sortOrders);
         }
 
@@ -124,12 +130,12 @@ public class OrderingCompiler
                 type(PagesIndexComparator.class));
 
         classDefinition.declareDefaultConstructor(a(PUBLIC));
-        generateCompareTo(classDefinition, callSiteBinder, sortTypes, sortChannels, sortOrders);
+        generatePageIndexCompareTo(classDefinition, callSiteBinder, sortTypes, sortChannels, sortOrders);
 
         return defineClass(classDefinition, PagesIndexComparator.class, callSiteBinder.getBindings(), getClass().getClassLoader());
     }
 
-    private static void generateCompareTo(ClassDefinition classDefinition, CallSiteBinder callSiteBinder, List<Type> sortTypes, List<Integer> sortChannels, List<SortOrder> sortOrders)
+    private static void generatePageIndexCompareTo(ClassDefinition classDefinition, CallSiteBinder callSiteBinder, List<Type> sortTypes, List<Integer> sortChannels, List<SortOrder> sortOrders)
     {
         Parameter pagesIndex = arg("pagesIndex", PagesIndex.class);
         Parameter leftPosition = arg("leftPosition", int.class);
@@ -207,6 +213,96 @@ public class OrderingCompiler
                             leftBlockPosition,
                             rightBlock,
                             rightBlockPosition));
+
+            LabelNode equal = new LabelNode("equal");
+            block.comment("if (compare != 0) return compare")
+                    .dup()
+                    .ifZeroGoto(equal)
+                    .retInt()
+                    .visitLabel(equal)
+                    .pop(int.class);
+
+            compareToMethod.getBody().append(block);
+        }
+
+        // values are equal
+        compareToMethod.getBody()
+                .push(0)
+                .retInt();
+    }
+
+    public PageWithPositionComparator compilePageWithPositionComparator(List<Type> sortTypes, List<Integer> sortChannels, List<SortOrder> sortOrders)
+    {
+        requireNonNull(sortTypes, "sortTypes is null");
+        requireNonNull(sortChannels, "sortChannels is null");
+        requireNonNull(sortOrders, "sortOrders is null");
+
+        return pageWithPositionComparators.getUnchecked(new PagesIndexComparatorCacheKey(sortTypes, sortChannels, sortOrders));
+    }
+
+    private PageWithPositionComparator internalCompilePageWithPositionComparator(List<Type> types, List<Integer> sortChannels, List<SortOrder> sortOrders)
+    {
+        PageWithPositionComparator comparator;
+        try {
+            Class<? extends PageWithPositionComparator> pageWithPositionsComparatorClass = generatePageWithPositionComparatorClass(types, sortChannels, sortOrders);
+            comparator = pageWithPositionsComparatorClass.getConstructor().newInstance();
+        }
+        catch (Throwable t) {
+            log.error(t, "Error compiling merge sort comparator for channels %s with order %s", sortChannels, sortChannels);
+            comparator = new SimplePageWithPositionComparator(types, sortChannels, sortOrders);
+        }
+        return comparator;
+    }
+
+    private Class<? extends PageWithPositionComparator> generatePageWithPositionComparatorClass(List<Type> sortTypes, List<Integer> sortChannels, List<SortOrder> sortOrders)
+    {
+        CallSiteBinder callSiteBinder = new CallSiteBinder();
+
+        ClassDefinition classDefinition = new ClassDefinition(
+                a(PUBLIC, FINAL),
+                makeClassName("PageWithPositionComparator"),
+                type(Object.class),
+                type(PageWithPositionComparator.class));
+
+        classDefinition.declareDefaultConstructor(a(PUBLIC));
+
+        generateMergeSortCompareTo(classDefinition, callSiteBinder, sortTypes, sortChannels, sortOrders);
+
+        return defineClass(classDefinition, PageWithPositionComparator.class, callSiteBinder.getBindings(), getClass().getClassLoader());
+    }
+
+    private void generateMergeSortCompareTo(ClassDefinition classDefinition, CallSiteBinder callSiteBinder, List<Type> types, List<Integer> sortChannels, List<SortOrder> sortOrders)
+    {
+        Parameter leftPage = arg("leftPage", Page.class);
+        Parameter leftPosition = arg("leftPosition", int.class);
+        Parameter rightPage = arg("rightPage", Page.class);
+        Parameter rightPosition = arg("rightPosition", int.class);
+        MethodDefinition compareToMethod = classDefinition.declareMethod(a(PUBLIC), "compareTo", type(int.class), leftPage, leftPosition, rightPage, rightPosition);
+
+        for (int i = 0; i < sortChannels.size(); i++) {
+            int sortChannel = sortChannels.get(i);
+            SortOrder sortOrder = sortOrders.get(i);
+
+            BytecodeBlock block = new BytecodeBlock()
+                    .setDescription("compare channel " + sortChannel + " " + sortOrder);
+
+            Type sortType = types.get(sortChannel);
+
+            BytecodeExpression leftBlock = leftPage
+                    .invoke("getBlock", Block.class, constantInt(sortChannel));
+
+            BytecodeExpression rightBlock = rightPage
+                    .invoke("getBlock", Block.class, constantInt(sortChannel));
+
+            block.append(getStatic(SortOrder.class, sortOrder.name())
+                    .invoke("compareBlockValue",
+                            int.class,
+                            ImmutableList.of(Type.class, Block.class, int.class, Block.class, int.class),
+                            constantType(callSiteBinder, sortType),
+                            leftBlock,
+                            leftPosition,
+                            rightBlock,
+                            rightPosition));
 
             LabelNode equal = new LabelNode("equal");
             block.comment("if (compare != 0) return compare")
