@@ -51,7 +51,7 @@ public class TestingPrestoServerLauncher
     {
         try (TestingPrestoServer server = new TestingPrestoServer()) {
             for (String pluginClass : options.getPluginClassNames()) {
-                Plugin plugin = (Plugin) Class.forName(pluginClass).newInstance();
+                Plugin plugin = (Plugin) Class.forName(pluginClass).getConstructor().newInstance();
                 server.installPlugin(plugin);
             }
 
